====================================================
MySQL Connector/Python - Release Notes & Changes
====================================================

MySQL Connector/Python
Copyright (c) 2009, 2025, Oracle and/or its affiliates.

Full release notes:
 http://dev.mysql.com/doc/relnotes/connector-python/en/

v9.3.0
======

- WL#16327: Remove Cursors Prepared Raw and Named Tuple
- BUG#37453587: Github links in PyPI project's pages do not work
- BUG#37418436: Arbitrary File Read in MySQL Python Client library

v9.2.0
======

- WL#16381: Add support for read and write timeouts
- WL#16285: Remake Multi Statement Execution
- BUG#37145655: MySQL Connector/Python Configuration Files RCE
- BUG#36702939: connection_cext has a memory leak in the python mysql-connector
- BUG#36922645: Option `connection_timeout` is overwritten and works as "query" timeout instead
- BUG#36126909: "Unread result found" exception/bad MySQLCursor.statement when query text contains code comments
- BUG#35810050: Executing multiple statements fails when importing Sakila

v9.1.0
======

- WL#16452: Bundle all installable authentication plugins when building the C-extension
- WL#16444: Drop build support for DEB packages
- WL#16442: Upgrade gssapi version to 1.8.3
- WL#16411: Improve wheel metadata information for Classic and XDevAPI connectors
- WL#16341: OpenID Connect (Oauth2 - JWT) Authentication Support
- WL#16307: Remove Python 3.8 support
- WL#16306: Add support for Python 3.13
- BUG#37055435: Connection fails during the TLS negotiation when specifying TLSv1.3 ciphers
- BUG#37013057: mysql-connector-python Parameterized query SQL injection
- BUG#36765200: python mysql connector 8.3.0 raise %-.100s:%u when input a wrong host
- BUG#36577957: Update charset/collation description indicate this is 16 bits

v9.0.0
======

- WL#16350: Update dnspython version
- WL#16318: Deprecate Cursors Prepared Raw and Named Tuple
- WL#16284: Update the Python Protobuf version