@@ -377,7 +377,6 @@ class CMySQLConnection(MySQLConnectionAbstract):
                 warn_ciphersuites_deprecated(cipher, tls_version)
 
     def close(self) -> None:
-        """Disconnect from the MySQL server"""
         if self._span and self._span.is_recording():
             # pylint: disable=possibly-used-before-assignment
             record_exception_event(self._span, sys.exc_info()[1])
